--- a/Colmar-academy-main/Colmar-academy-main/Site internet/index.html
+++ b/Colmar-academy-main/Colmar-academy-main/Site internet/index.html
@@ -19,7 +19,7 @@
                     <div ID="text">
                     
                         <h1>Learn something new everyday</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p>Lore ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <button>Start here</button>
                     </div>
             
